05 Apr 2007 coudercd
 * removed obsolete option LIBOBJ.
 * added missing initialisation of lib_type in the scanzone structure.

21 Mar 2007 coudercd
 * fixed errors in manual pages and replaced blank lines by one dot
   lines, notified by Magnus Holmgren.
 * fixed the duplicates in macro GEN_FILES of generated makefiles, also
   notified by Magnus Holmgren.

28 Feb 2007 coudercd
 * fixed the label of shared lib linking flags variable in the log
   message (noticed by barratis from toy'd project).

25 Feb 2007 coudercd
 * fixed a segfaulting bug in code_logger().

15 Feb 2007 coudercd
 * fixed a bug occuring in pmkpc when specifying both --cflags and
   --libs options. The result is now separated but a space.

# PMK 0.10.1 release

24 Dec 2006 coudercd
 * fixed codebuild bug spotted by toyd team on linux.
 * reordered pmkcfg.sh compiler detection.

08 Dec 2006 coudercd
 * fixed install_lib target in makefile generation from pmkscan.
 * removed the compatibility option -c for install for portability.

# PMK 0.10.0 release

18 Nov 2006 coudercd
 * added in pmkscan the code to create binary install directory in
   generated makefile template.
 * support alternative assembler in pmkcfg.sh via AS variable.
 * update Makefile.pmk template to create correctly the binary install
   directory.
 * also added in pmkscan the code for install data directory creation
   in the generated makefile template.

# snapshot 20061028

22 Oct 2006 coudercd
 * added BUILD_LIB_NAME() to replace BUILD_SHLIB_NAME() as it also build
   the static library name.
 * marked BUILD_SHLIB_NAME() as obsolete.
 * fixed manual page directories for usermode install.

22 Oct 2006 coudercd
 * added support for shared library versioning.
 * library version numbers become optional.

14 Oct 2006 coudercd
 * lib checking fix was incomplete, it should be now (noticed by Phil
   aka wintellect).
 * fixed -u option of pmksetup and added a reminder in man page to
   escape double quotes.

11 Oct 2006 coudercd