@@ -1,3 +1,7 @@
+10 Apr 2007 coudercd
+ * resized ressources in pmkscan for larger projects.
+ * added more messages in pmkscan.
+
 05 Apr 2007 coudercd
  * removed obsolete option LIBOBJ.
  * added missing initialisation of lib_type in the scanzone structure.
